<resources>
    <string name="app_name">Excalibur News</string>

    <string name="facebook_app_id">1702104003394612</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="article_title">Article Headline Title</string>
    <string name="article_aurthur">Article by so and so</string>
    <string name="article_body">Body of article</string>
    <string name="facebookShare">Facebook</string>
    <string name="sports">Sports</string>
    <string name="technology">Technology</string>
    <string name="businessDay">Business Day</string>
    <string name="world">World</string>
    <string name="u_s">U.S.</string>
    <string name="breakingNews">Breaking News</string>
    <string name="arts">Arts</string>
    <string name="business">Business Day</string>
    <string name="n_y">New York Times</string>
    <string name="magazine">International Herald Tribune</string>
    <string name="saved_articles">Saved Articles</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="herald_mag">Herold Magazine</string>
    <string name="share">share</string>
    <string name="action_settings"></string>
    <string name="search_drawer">Search</string>
    <string name="search_main_toolbar">Search</string>
    <string name="share_toolbar">Share</string>
    <string name="actions_drawer">Settings</string>
    <string name="nav_header_text">Excalibur News</string>

    <string name="search_articles">Search articles</string>
    <string name="stopNotification">Stop Notifications</string>
    <string name="startNotification">Start Notifications</string>
    <string name="searching_for_toast">"Searching for "</string>
    <string name="toolbar_search_title">Search</string>
    <string name="network_check">No Network Connection Detected</string>
    <string name="articles_saved">You have zero stories saved</string>
    <string name="you_have">You have</string>
    <string name="articles_amount">articles saved</string>



</resources>
